# mcpscore

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MISSION.md  Makefile  README.md  SECURITY.md  main.py  pyproject.toml  ruff.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  enhancement.yml
.github/workflows/: canary.yml  ci.yml  docs.yml  publish-npm.yml  publish.yml
docs/: docs.json  github-action.mdx  index.mdx  methodology.mdx  rules.mdx  stability.mdx
mcpaudit/: __init__.py  cli.py  mcp_auditor.py  mcp_client.py
mcpaudit/rules/: __init__.py  base.py  capabilities.py  protocol_version.py  registry.py  security.py  server_info.py  tools.py  transport.py
mcpdoctor/: __init__.py  cli.py  enums.py  mcp_auditor.py  mcp_client.py  mcp_doctor.py
mcpdoctor/rules/: protocol_version.py  security.py
mcpscore/: __init__.py  cli.py  enums.py  mcp_auditor.py  mcp_client.py  oauth.py  probes.py  spec.py
mcpscore/rules/: __init__.py  auth.py  base.py  capabilities.py  prompts.py  protocol_version.py  readiness.py  registry.py  resources.py  security.py  server_info.py  tools.py  transport.py
npm/: README.md  package.json
scripts/: generate_rules_doc.py  release.py
tests/: __init__.py  conftest.py  test_auditor.py  test_auth_rules.py  test_capabilities_rules.py  test_cli.py  test_doctor.py  test_generate_rules_doc.py  test_mcp_client_connection_error.py  test_mcp_client_handshake.py  test_mcp_client_http.py  test_mcp_client_session.py  test_mcp_client_sse.py  test_mcp_client_stdio.py  test_modern_only_audit.py  test_oauth.py  test_probes.py  test_prompts_rules.py  test_protocol_version_rules.py  test_readiness_rules.py  test_registry.py  test_release_script.py  test_resources_rules.py  test_rule_applicability.py  test_security_rules.py  test_server_info_rules.py  test_spec.py  test_tools_rules.py  test_transport_rules.py
