[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcpaudit"
version = "0.2.0"
description = "CLI tool to analyze your MCP server and get a comprehensive report on its quality"
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.23.0",
    "httpx>=0.28.0",
    "httpx-sse>=0.4.0",
]

[project.scripts]
mcpaudit = "mcpaudit.cli:main"

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.14.8",
]

[tool.pyright]
reportMissingImports = true
venvPath = "."
venv = ".venv"
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
reportPropertyTypeMismatch = true
reportImportCycles = true
reportUntypedFunctionDecorator = "warning"
reportUntypedClassDecorator = "warning"
reportUntypedBaseClass = "warning"
reportDeprecated = "warning"
reportInvalidTypeVarUse = true
reportUnnecessaryCast = true
reportUnnecessaryComparison = true
reportUnnecessaryContains = true
reportAssertAlwaysTrue = true
reportUnsupportedDunderAll = true
reportUnnecessaryTypeIgnoreComment = "warning"
reportMissingSuperCall = true
reportFunctionMemberAccess = false
reportInvalidTypeForm = false
reportPrivateImportUsage = false
