[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "mcpscore",
    "tests",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["mcpscore"]

[project]
name = "mcpscore"
version = "0.3.0"
description = "CLI tool to analyze your MCP server and get a comprehensive report on its quality"
authors = [{ name = "Alex Akimov"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
keywords = [
    "mcp",
    "model-context-protocol",
    "mcp-server",
    "audit",
    "cli",
    "quality",
    "llm",
    "ai",
    "developer-tools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
    "Environment :: Console",
]
dependencies = [
    "mcp>=1.23.0",
    "httpx>=0.28.0",
    "httpx-sse>=0.4.0",
]

[project.urls]
Homepage = "https://mcp-box.dev"
Repository = "https://github.com/mcp-box/mcpscore"
Issues = "https://github.com/mcp-box/mcpscore/issues"

[project.scripts]
mcpscore = "mcpscore.cli:main"

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.14.8",
]

[tool.pyright]
reportMissingImports = true
venvPath = "."
venv = ".venv"
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
reportPropertyTypeMismatch = true
reportImportCycles = true
reportUntypedFunctionDecorator = "warning"
reportUntypedClassDecorator = "warning"
reportUntypedBaseClass = "warning"
reportDeprecated = "warning"
reportInvalidTypeVarUse = true
reportUnnecessaryCast = true
reportUnnecessaryComparison = true
reportUnnecessaryContains = true
reportAssertAlwaysTrue = true
reportUnsupportedDunderAll = true
reportUnnecessaryTypeIgnoreComment = "warning"
reportMissingSuperCall = true
reportFunctionMemberAccess = false
reportInvalidTypeForm = false
reportPrivateImportUsage = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--strict-config", "--strict-markers"]

[tool.coverage.run]
source = ["mcpscore"]
branch = true

[tool.coverage.report]
fail_under = 95
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.codespell]
skip = "uv.lock"
